API: Sync all Admin endpoints and add Comment support